[package]
name = "aluminum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aluminum"
crate-type = ["cdylib"]

[dependencies]

pyo3 = { version = "0.17.3", features = ["extension-module"] }
pyo3-asyncio = { version = "0.17", features = ["tokio-runtime", "attributes"] }
influxdb2 = "0.3"
futures = { version = "0.3", default-features = false }
num-traits = "0.2"
influxdb2-structmap = "0.2.0"
